--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,6 +4,7 @@
     // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
     "version": "0.2.0",
     "configurations": [
+
         {
             "name": "Create Instance",
             "type": "python",
@@ -37,6 +38,15 @@
             "request": "launch",
             "program": "/workspaces/rddl_training_data_producer/main.py",
             "args": ["animate"],
+            "console": "integratedTerminal",
+            "justMyCode": true
+        }
+        {
+            "name": "Evaluate",
+            "type": "python",
+            "request": "launch",
+            "program": "/workspaces/rddl_training_data_producer/main.py",
+            "args": ["evaluate"],
             "console": "integratedTerminal",
             "justMyCode": true
         }
