Creating one static mini instance.

--- a/config.json
+++ b/config.json
@@ -3,8 +3,8 @@
     "snapshot_sequence_dirpath": "snapshot_sequences/",
     "tmp_dirpath": "tmp/",
     "domain_rddl_filepath": "rddl/domain.rddl",
-    "instance_rddl_filepath": "rddl/instance_random_larger_1500_20231205_112014.rddl",
-    "graph_index_filepath": "rddl/graph_index_random_larger_1500_20231205_112014.pkl",
+    "instance_rddl_filepath": "rddl/instance_mini.rddl",
+    "graph_index_filepath": "rddl/graph_index_mini.pkl",
     "training_sequence_filepath": "snapshot_sequences/snapshot_sequence_n8_l500_random_larger_1500_20231205_112014.pkl",
     "predictor_filepath": "models/model_n16_l8_random_large_2500_20231203_174808_hl_[128, 128]_n_29270_lr_0.001_bs_256.pt",
     "evaluation_sequence_filepath": "snapshot_sequences/snapshot_sequence_n1_l500_random_larger_1500_20231205_112014.pkl",
