--- a/config.json
+++ b/config.json
@@ -3,12 +3,11 @@
     "snapshot_sequence_dirpath": "snapshot_sequences/",
     "tmp_dirpath": "tmp/",
     "domain_rddl_filepath": "rddl/domain.rddl",
-    "instance_rddl_filepath": "rddl/instance_mini.rddl",
-    "graph_index_filepath": "rddl/graph_index_mini.pkl",
-    "training_sequence_filepath": "snapshot_sequences/snapshot_sequence_n8_l500_random_larger_1500_20231205_112014.pkl",
-    "predictor_filepath": "models/model_n16_l8_random_large_2500_20231203_174808_hl_[128, 128]_n_29270_lr_0.001_bs_256.pt",
-    "evaluation_sequence_filepath": "snapshot_sequences/snapshot_sequence_n1_l500_random_larger_1500_20231205_112014.pkl",
-    "animation_sequence_filepath": "snapshot_sequences/snapshot_sequence_n1_l500_random_larger_1500_20231205_112014.pkl",
+    "instance_rddl_filepath": "rddl/instance_random_large_500_20231205_200344.rddl",
+    "graph_index_filepath": "rddl/graph_index_random_large_500_20231205_200344.pkl",
+    "training_sequence_filepath": "snapshot_sequences/snapshot_sequence_n64_l256_random_large_500_20231205_200344.pkl",
+    "evaluation_sequence_filepath": "snapshot_sequences/snapshot_sequence_n1_l256_random_large_500_20231205_200344.pkl",
+    "animation_sequence_filepath": "snapshot_sequences/snapshot_sequence_n1_l256_random_large_500_20231205_200344.pkl",
     "predictor_type": "gnn",
-    "predictor_filename": "models/model_n8_l500_random_larger_1500_20231205_112014_hl_[32]_n_7682_lr_0.001_bs_256_20231205_113951.pt"
+    "predictor_filename": "models/model_n64_l256_random_large_500_20231205_200344_hl_[8]_n_15616_lr_0.001_bs_256_20231205_201309.pt"
 }
