--- a/config.json
+++ b/config.json
@@ -3,15 +3,45 @@
     "snapshot_sequence_dirpath": "snapshot_sequences/",
     "tmp_dirpath": "tmp/",
     "domain_rddl_filepath": "domain.rddl",
-    "training_sequence_filepath": "snapshot_sequences/snapshot_sequence_n128_l128_n_16_2000_20231209_070502_1753.pkl",
-    "evaluation_sequence_filepath": "snapshot_sequences/snapshot_sequence_n32_l128_n_16_2000_20231209_070615_4971.pkl",
-    "animation_sequence_filepath": "snapshot_sequences/snapshot_sequence_n1_l128_n_16_2000_20231209_073334_3083.pkl",
+    "training_sequence_filepath": "snapshot_sequences/snapshot_sequence_n16_l128_n_1024_500_20231209_091443_0702.pkl",
+    "evaluation_sequence_filepath": "snapshot_sequences/snapshot_sequence_n64_l128_n_16_2000_20231209_090729_3144.pkl",
+    "animation_sequence_filepath": "snapshot_sequences/snapshot_sequence_n1_l128_n_16_2000_20231209_090809_3551.pkl",
     "predictor_type": "gnn",
-    "predictor_filename": "models/model_n128_l128_n_16_2000_20231209_070502_1753_hl_[128, 128]_n_70252_lr_0.001_bs_256_20231209_070836.pt",
+    "predictor_filename": "models/model_n256_l128_n_16_2000_20231209_090249_7647_hl_[128, 128]_n_72898_lr_0.001_bs_256_20231209_090728.pt",
     "instance_rddl_filepaths": [
-        "rddl/instance_n_16_2000_20231209_073334_3083.rddl"
+        "rddl/instance_n_1024_500_20231209_091443_0702.rddl",
+        "rddl/instance_n_1024_500_20231209_091443_1031.rddl",
+        "rddl/instance_n_1024_500_20231209_091443_1320.rddl",
+        "rddl/instance_n_1024_500_20231209_091443_1609.rddl",
+        "rddl/instance_n_1024_500_20231209_091443_1893.rddl",
+        "rddl/instance_n_1024_500_20231209_091443_2180.rddl",
+        "rddl/instance_n_1024_500_20231209_091443_2467.rddl",
+        "rddl/instance_n_1024_500_20231209_091443_2755.rddl",
+        "rddl/instance_n_1024_500_20231209_091443_3048.rddl",
+        "rddl/instance_n_1024_500_20231209_091443_3337.rddl",
+        "rddl/instance_n_1024_500_20231209_091443_3623.rddl",
+        "rddl/instance_n_1024_500_20231209_091443_3910.rddl",
+        "rddl/instance_n_1024_500_20231209_091443_4198.rddl",
+        "rddl/instance_n_1024_500_20231209_091443_4490.rddl",
+        "rddl/instance_n_1024_500_20231209_091443_4771.rddl",
+        "rddl/instance_n_1024_500_20231209_091443_5059.rddl"
     ],
     "graph_index_filepaths": [
-        "rddl/graph_index_n_16_2000_20231209_073334_3083.pkl"
+        "rddl/graph_index_n_1024_500_20231209_091443_0702.pkl",
+        "rddl/graph_index_n_1024_500_20231209_091443_1031.pkl",
+        "rddl/graph_index_n_1024_500_20231209_091443_1320.pkl",
+        "rddl/graph_index_n_1024_500_20231209_091443_1609.pkl",
+        "rddl/graph_index_n_1024_500_20231209_091443_1893.pkl",
+        "rddl/graph_index_n_1024_500_20231209_091443_2180.pkl",
+        "rddl/graph_index_n_1024_500_20231209_091443_2467.pkl",
+        "rddl/graph_index_n_1024_500_20231209_091443_2755.pkl",
+        "rddl/graph_index_n_1024_500_20231209_091443_3048.pkl",
+        "rddl/graph_index_n_1024_500_20231209_091443_3337.pkl",
+        "rddl/graph_index_n_1024_500_20231209_091443_3623.pkl",
+        "rddl/graph_index_n_1024_500_20231209_091443_3910.pkl",
+        "rddl/graph_index_n_1024_500_20231209_091443_4198.pkl",
+        "rddl/graph_index_n_1024_500_20231209_091443_4490.pkl",
+        "rddl/graph_index_n_1024_500_20231209_091443_4771.pkl",
+        "rddl/graph_index_n_1024_500_20231209_091443_5059.pkl"
     ]
 }
