--- a/config.json
+++ b/config.json
@@ -3,15 +3,15 @@
     "snapshot_sequence_dirpath": "snapshot_sequences/",
     "tmp_dirpath": "tmp/",
     "domain_rddl_filepath": "domain.rddl",
-    "training_sequence_filepath": "snapshot_sequences/snapshot_sequence_n512_l128_n_242_512_20231209_204906_2593.pkl",
-    "evaluation_sequence_filepath": "snapshot_sequences/snapshot_sequence_n64_l128_n_242_512_20231210_044733_3455.pkl",
-    "animation_sequence_filepath": "snapshot_sequences/snapshot_sequence_n1_l128_n_512_512_20231210_053247_3927.pkl",
+    "training_sequence_filepath": "snapshot_sequences/snapshot_sequence_n1024_l128_n_46_256_20231210_080641_3768.pkl",
+    "evaluation_sequence_filepath": "snapshot_sequences/snapshot_sequence_n64_l128_n_22_256_20231210_100754_8192.pkl",
+    "animation_sequence_filepath": "snapshot_sequences/snapshot_sequence_n1_l128_n_256_256_20231210_101114_6310.pkl",
     "predictor_type": "gnn",
-    "predictor_filename": "models/model_n512_l128_n_242_512_20231209_204906_2593_hl_[128, 128]_n_186895_lr_0.001_bs_256_20231210_074013.pt",
+    "predictor_filename": "models/model_n1024_l128_n_46_256_20231210_080641_3768_hl_[1024, 1024, 1024]_n_129819_lr_0.001_bs_256_20231210_095943.pt",
     "instance_rddl_filepaths": [
-        "rddl/instance_n_128_500_20231210_070912_6236.rddl"
+        "rddl/instance_n_256_256_20231210_101114_6310.rddl"
     ],
     "graph_index_filepaths": [
-        "rddl/graph_index_n_128_500_20231210_070912_6236.pkl"
+        "rddl/graph_index_n_256_256_20231210_101114_6310.pkl"
     ]
 }
