--- a/config.json
+++ b/config.json
@@ -3,9 +3,9 @@
     "training_sequence_dirpath": "training_sequences/",
     "evaluation_sequence_dirpath": "evaluation_sequences/",
     "animation_sequence_dirpath": "animation_sequences/",
-    "domain_rddl_filepath": "domain.rddl",
+    "domain_rddl_filepath": "../heatmap/heatmap.mal",
     "predictor_type": "gnn",
-    "predictor_filename": "models/model_n1024_l128_n_46_256_20231210_080641_3768_hl_[128, 128]_n_129819_lr_0.001_bs_256_20231211_132754.pt",
+    "predictor_filename": "models/model/GAT/log_window_64/10_nodes/_hl_128,128,128_lstm_128_nsnpsht_128_lr_0.0002_bs_128_20240404_104946.pt",
     "instance_rddl_filepaths": [
         "rddl/instance_nnodes_72_gt_1024_20240314_135059_1656.rddl"
     ],
