--- a/scripts/hp_config.yaml
+++ b/scripts/hp_config.yaml
@@ -3,48 +3,48 @@ studySpec:
   - metricId: F1
     goal: MAXIMIZE
   parameters:
-  - parameterId: gnn_type
-    categoricalValueSpec:
-      values: ['GAT']
+  # - parameterId: gnn_type
+  #   categoricalValueSpec:
+  #     values: ['GAT']
   - parameterId: min_game_time
     integerValueSpec:
       minValue: 4
       maxValue: 4
-  - parameterId: max_game_time
-    integerValueSpec:
-      minValue: 1024
-      maxValue: 1024
-    scaleType: UNIT_LOG_SCALE
+  # - parameterId: max_game_time
+  #   integerValueSpec:
+  #     minValue: 1024
+  #     maxValue: 1024
+  #   scaleType: UNIT_LOG_SCALE
   - parameterId: max_training_sequences
     integerValueSpec:
       minValue: 64
-      maxValue: 64
+      maxValue: 256
     scaleType: UNIT_LOG_SCALE
   - parameterId: n_validation_sequences
     integerValueSpec:
       minValue: 16
-      maxValue: 16
+      maxValue: 32
     scaleType: UNIT_LOG_SCALE
   - parameterId: n_uncompromised_sequences
     integerValueSpec:
-      minValue: 32
+      minValue: 16
       maxValue: 32
     scaleType: UNIT_LOG_SCALE
-  - parameterId: batch_size
-    integerValueSpec:
-      minValue: 128
-      maxValue: 128
-    scaleType: UNIT_LOG_SCALE
-  - parameterId: min_size
-    integerValueSpec:
-      minValue: 128
-      maxValue: 128
-    scaleType: UNIT_LOG_SCALE
-  - parameterId: max_size
-    integerValueSpec:
-      minValue: 256
-      maxValue: 256
-    scaleType: UNIT_LOG_SCALE
+  # - parameterId: batch_size
+  #   integerValueSpec:
+  #     minValue: 128
+  #     maxValue: 128
+  #   scaleType: UNIT_LOG_SCALE
+  # - parameterId: min_size
+  #   integerValueSpec:
+  #     minValue: 4
+  #     maxValue: 4
+  #   scaleType: UNIT_LOG_SCALE
+  # - parameterId: max_size
+  #   integerValueSpec:
+  #     minValue: 1500
+  #     maxValue: 1500
+  #   scaleType: UNIT_LOG_SCALE
   - parameterId: train_log_window
     integerValueSpec:
       minValue: 64
@@ -52,13 +52,18 @@ studySpec:
     scaleType: UNIT_LOG_SCALE
   - parameterId: epochs
     integerValueSpec:
-      minValue: 16
-      maxValue: 16
+      minValue: 10
+      maxValue: 32
+    scaleType: UNIT_LOG_SCALE
+  - parameterId: fp_rate
+    doubleValueSpec:
+      minValue: 0.005
+      maxValue: 0.1
     scaleType: UNIT_LOG_SCALE
   - parameterId: learning_rate
     doubleValueSpec:
-      minValue: 0.0001
-      maxValue: 0.001
+      minValue: 0.00005
+      maxValue: 0.01
     scaleType: UNIT_LOG_SCALE
   - parameterId: n_hidden_layer_1
     integerValueSpec:
@@ -85,15 +90,20 @@ studySpec:
       minValue: 1
       maxValue: 8
     scaleType: UNIT_LOG_SCALE
-  - parameterId: lstm_hidden_dim
+  - parameterId: minority_weight
     integerValueSpec:
-      minValue: 256
-      maxValue: 2048
+      minValue: 2
+      maxValue: 3
     scaleType: UNIT_LOG_SCALE
+  # - parameterId: lstm_hidden_dim
+  #   integerValueSpec:
+  #     minValue: 256
+  #     maxValue: 2048
+  #   scaleType: UNIT_LOG_SCALE
 trialJobSpec:
   workerPoolSpecs:
     - machineSpec:
-        machineType: n1-standard-8
+        machineType: n1-highcpu-32
       replicaCount: 1
       containerSpec:
-        imageUri: europe-west1-docker.pkg.dev/gnn-rddl/gnn-rddl/gnnrddl
+        imageUri: europe-north1-docker.pkg.dev/aps-validation-joarjox/heatmap-images/heatmap:latest
