--- a/requirements.macos.txt
+++ b/requirements.macos.txt
@@ -1,7 +1,8 @@
 matplotlib
 pyRDDLGym
 torch
-torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.2.0+cpu.html
+torch==2.4.0
+torch_scatter torch_sparse torch_cluster torch_spline_conv -f https://data.pyg.org/whl/torch-2.4.0+cu124.html
 torch_geometric
 torch_geometric_temporal
 google-cloud-storage
@@ -9,3 +10,5 @@ google-cloud-logging
 google-cloud-secret-manager
 cloudml-hypertune
 wandb
+scikit-learn
+numpy==1.26.4
